--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,8 @@ html {
 }
 body {
   background: #eee;
-  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  /*background-image: url("https://www.transparenttextures.com/patterns/cubes.png");*/
+  background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
   padding: 0 16px;
 }
 
